remove date fields from objectreference
