# openapi/openapi.yaml
@@ -32,12 +32,6 @@ components:
           type: string
         href:
           type: string
-        created_at:
-          type: string
-          format: date-time
-        updated_at:
-          type: string
-          format: date-time
     List:
       type: object
       properties:
